--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ apply plugin: 'idea'
 group 'com.apulbere'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 11
+sourceCompatibility = 12
 
 repositories {
     mavenCentral()
@@ -17,4 +17,11 @@ repositories {
 
 dependencies {
     testCompile group: 'org.spockframework', name: 'spock-core', version: '1.1-groovy-2.4'
+    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.5.0-M1'
+    testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.8'
+    testImplementation group: 'org.projectlombok', name: 'lombok', version: '1.18.8'
+}
+
+test {
+    useJUnitPlatform()
 }
